# repository1

./: test.txt
Esercitazione1/: Esercizio1.cpp  printargs.cpp
Esercitazione2/: CMakeLists.txt  Esercizio1.cpp  Esercizio2.cpp
esercitazione4/: algoritmi_ordinamento.h  is_sorted.h  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  Osservazioni.txt  algoritmi_ordinamento.h  measure_sorts.cpp  test_mergesort.cpp  test_quicksort.cpp
temp_folder/: CMakeLists.txt
